Bug 399773 - Spectacle does not honor non-png file format preferences when using Save As
Summary: Spectacle does not honor non-png file format preferences when using Save As
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords: junior-jobs, usability
: 397709 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-13 22:24 UTC by Nate Graham
Modified: 2018-10-20 05:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2018-10-13 22:24:28 UTC
STEPS TO REPRODUCE
1. Configure > Save > change file format using the dropdown menu
2. Save As...

OBSERVED RESULT
The filename in the Save dialog always ends with .png. Clicking "Save" results in a PNG file being created

EXPECTED RESULT
The filename should end with the same filename extension and the file

SOFTWARE VERSIONS
KDE Apps version: 17.12.3 or git master
KDE Frameworks Version: 5.47 or git master
Qt Version: 5.9.5 or 5.11.1

ADDITIONAL INFORMATION
Works correctly with the Save menu item, just not Save As.
Comment 1 Nate Graham 2018-10-19 12:55:04 UTC
Git commit 4e51fa0676eca72d12cc38094f852a4fef25a412 by Nate Graham.
Committed on 19/10/2018 at 12:48.
Pushed by ngraham into branch 'master'.

Respect user-specified filetype for Save As... operations

Summary:
Currently, when doing {nav Save As...} operations, Spectacle outright ignores the filetype you choose in {nav Settings} and always defaults to saving as a `.png` file. This patch fixes that.
FIXED-IN: 18.12.0

Test Plan:
1. {nav Settings > Save > change the file type to something other than PNG}
2. {nav Save as...}
The file dialog now comes pre-populated with the correct file type, and saving file saves it as that file type.

Tested with all available file types.

Reviewers: #spectacle, #kde_applications, broulik, utecht, alexeymin, shubham

Reviewed By: #spectacle, alexeymin

Subscribers: aacid

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D16190

M  +5    -3    src/ExportManager.cpp

https://commits.kde.org/spectacle/4e51fa0676eca72d12cc38094f852a4fef25a412
Comment 2 Nate Graham 2018-10-20 05:11:02 UTC
*** Bug 397709 has been marked as a duplicate of this bug. ***